--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ long_description_content_type = text/markdown
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
-    Framework :: napari
+#    Framework :: napari
     Topic :: Software Development :: Testing
     Programming Language :: Python
     Programming Language :: Python :: 3
