--- a/setup.cfg
+++ b/setup.cfg
@@ -1,25 +1,25 @@
 [metadata]
-name = spatial-analysis-toolkit
-
-author = Kevin Yamauchi
-author_email = kevin.yamauchi@gmail.com
-url = https://github.com/kevinyamauchi/spatial-analysis-toolkit
-license = BSD-3-Clause
+name = spatial_analysis_toolkit
 description = tools for interacting with spatial data
 long_description = file: README.md
 long_description_content_type = text/markdown
+url = https://github.com/kevinyamauchi/spatial-analysis-toolkit
+author = Kevin Yamauchi
+author_email = kevin.yamauchi@gmail.com
+license = BSD-3-Clause
+license_file = LICENSE
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
-#    Framework :: napari
-    Topic :: Software Development :: Testing
+    License :: OSI Approved :: BSD License
+    Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
-    Operating System :: OS Independent
-    License :: OSI Approved :: BSD License
+    Topic :: Software Development :: Testing
 project_urls =
     Bug Tracker = https://github.com/kevinyamauchi/spatial-analysis-toolkit/issues
     Documentation = https://github.com/kevinyamauchi/spatial-analysis-toolkit#README.md
@@ -28,29 +28,35 @@ project_urls =
 
 [options]
 packages = find:
-include_package_data = True
+install_requires =
+    TissUUmaps[full]
+    numpy
+    pandas
+    scikit-image
+    squidpy
 python_requires = >=3.8
+include_package_data = True
 package_dir =
     =src
-setup_requires = setuptools_scm
-# add your package requirements here
-install_requires =
-    numpy
-
-
-[options.extras_require]
-testing =
-    tox
-    pytest  # https://docs.pytest.org/en/latest/contents.html
-    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
-
+setup_requires =
+    setuptools-scm
 
 [options.packages.find]
 where = src
 
+[options.entry_points]
+napari.manifest =
+    spatial-analysis-toolkit = spatial_analysis_toolkit:napari.yaml
+
+[options.extras_require]
+dev =
+    precommit
+    pytest
+    pytest-qt
+testing =
+    pytest
+    pytest-cov
+    tox
+
 [options.package_data]
 * = *.yaml
-
-[options.entry_points] 
-napari.manifest = 
-    spatial-analysis-toolkit = spatial_analysis_toolkit:napari.yaml
