--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,6 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    TissUUmaps[full]
     numpy
     pandas
     scikit-image
@@ -57,6 +56,8 @@ testing =
     pytest
     pytest-cov
     tox
+tissuumaps =
+    TissUUmaps[full]
 
 [options.package_data]
 * = *.yaml
