--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ install_requires =
     pandas
     scikit-image
     squidpy
+    tifffile==2022.3.25
 python_requires = >=3.8
 include_package_data = True
 package_dir =
